--- a/app/index.html
+++ b/app/index.html
@@ -7,41 +7,45 @@
           href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <link rel="stylesheet"
           href="../public/styles.css" />
+    <script src="./main.js"></script>
 </head>
 <body>
 <div id="app">
     <h2 class="title has-text-centered dividing-header">UpVote!</h2>
 
     <div class="section">
-        <article class="media">
+        <article v-for="submission in sortedSubmissions"
+            v-bind:key="submission.id"
+            v-bind:class="{'blue-border': submission.votes >= 20}"
+            class="media">
             <figure class="media-left">
                 <img class="image is-64x64"
-                     v-bind:src="submissions[0].submissionImage">
+                     v-bind:src="submission.submissionImage">
             </figure>
             <div class="media-content">
                 <div class="content">
                     <p>
                         <strong>
-                            <a v-bind:href="submissions[0].url" class="has-text-info">
-                                {{ submissions[0].title }}
+                            <a v-bind:href="submission.url" class="has-text-info">
+                                {{ submission.title }}
                             </a>
-                            <span class="tag is-small">#{{ submissions[0].id }}</span>
+                            <span class="tag is-small">#{{ submission.id }}</span>
                         </strong>
                         <br>
-                        {{ submissions[0].description }}
+                        {{ submission.description }}
                         <br>
                         <small class="is-size-7">
                             Submitted by:
                             <img class="image is-24x24"
-                                 v-bind:src="submissions[0].avatar">
+                                 v-bind:src="submission.avatar">
                         </small>
                     </p>
                 </div>
             </div>
             <div class="media-right">
-                <span class="icon is-small">
-                <i class="fa fa-chevron-up"></i>
-                <strong class="has-text-info">{{ submissions[0].votes }}</strong>
+                <span class="icon is-small" @click="upvote2(submission)">
+                    <i class="fa fa-chevron-up"></i>
+                    <strong class="has-text-info">{{ submission.votes }}</strong>
                 </span>
             </div>
         </article>
