--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <link rel="stylesheet"
-          href="../public/styles.css" />
-    <script src="./main.js"></script>
+          href="../public/styles.css"/>
 </head>
 <body>
 <div id="app">
@@ -15,39 +14,13 @@
 
     <div class="section">
         <article v-for="submission in sortedSubmissions"
-            v-bind:key="submission.id"
-            v-bind:class="{'blue-border': submission.votes >= 20}"
-            class="media">
-            <figure class="media-left">
-                <img class="image is-64x64"
-                     v-bind:src="submission.submissionImage">
-            </figure>
-            <div class="media-content">
-                <div class="content">
-                    <p>
-                        <strong>
-                            <a v-bind:href="submission.url" class="has-text-info">
-                                {{ submission.title }}
-                            </a>
-                            <span class="tag is-small">#{{ submission.id }}</span>
-                        </strong>
-                        <br>
-                        {{ submission.description }}
-                        <br>
-                        <small class="is-size-7">
-                            Submitted by:
-                            <img class="image is-24x24"
-                                 v-bind:src="submission.avatar">
-                        </small>
-                    </p>
-                </div>
-            </div>
-            <div class="media-right">
-                <span class="icon is-small" @click="upvote2(submission)">
-                    <i class="fa fa-chevron-up"></i>
-                    <strong class="has-text-info">{{ submission.votes }}</strong>
-                </span>
-            </div>
+                 v-bind:key="submission.id"
+                 v-bind:class="{'blue-border': submission.votes >= 20}"
+                 class="media">
+            <submission-component
+                    v-bind:submission="submission"
+                    v-bind:submissions="sortedSubmissions">
+            </submission-component>
         </article>
     </div>
 </div>
@@ -57,3 +30,5 @@
 <script src="./main.js"></script>
 </body>
 </html>
+
+
